source/stylesheets/_custom_styling.scss
html, body {
	font-family: 'Roboto', sans-serif;
	font-size: 15.6px;
}

.tocify-wrapper {
	font-size: 0.9rem;

	.tocify-subheader .tocify-item > a {
		font-size: 0.9rem;
	}
}

.content blockquote {
    padding: 2em 0;
    //font-size: 1.1em;
    font-size: 1em;
}

table {
	font-size: 0.9rem;
}

.content {
	h1 {
		font-size: 2.6rem;
	}
	h2 {
		font-size: 2rem;
	}
	h3 {
		font-size: 1.2rem;
	}
}

.tocify-wrapper ul, .tocify-wrapper li {
	line-height: 31px;
}

.content blockquote > p {
	background-color: $request-label-bg-color;
	border-top: 0;
	border-bottom: 0;
}

blockquote.example-description {
	background-color: $request-label-bg-color;
	font-size: 1.2em;
	padding: 2em 0px 0em 1em;

	p {
		background-color: $example-description-p-color;
		text-shadow: none;
		padding-bottom: 14px;
	}
}

.content blockquote.request-label, .content blockquote.response-label {
    padding: 0;
	font-size: 1rem;
    background-color: $request-label-bg-color;
    padding-top: 8px;
    text-shadow: none;
    //margin-top: 70px;

	p {
		padding: 0px 28px;
	    background-color: $request-label-bg-color;
	    border: none;
	    padding-bottom: 8px;
	}
}

.content pre {
	padding: 14px 42px;
    text-overflow: ellipsis;
}

blockquote.example-description {
	padding-top: 0;
	margin-top: 70px;
}

// Remove margin from the first one
h2.lecturer-view + blockquote.example-description, h2.student-view + blockquote.example-description,
	h2 + blockquote.example-description {
	margin-top: 0;
	padding: 0;
}

.tocify-wrapper .tocify-focus {
	box-shadow: none;
}

